# mcp-servers

./: CLAUDE.md  DOCKER_PORTS.md  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
docs/: quickstart.md  server-guide.md
examples/config/dify/: dify-mcp-settings.json
src/browser/: Dockerfile  Makefile  docker-compose.yml
src/composite/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  composite-config.yaml  docker-compose.yml  pyproject.toml  test_config.py  test_loader.py
src/composite/src/composite/: __init__.py  __main__.py  config.py  lifespan.py  loader.py  server.py
src/composite/tests/: test_parse_args.py
src/core/: pyproject.toml
src/data-analysis/: docker-compose.yml
src/dify/: Dockerfile  Makefile  docker-compose.yml
src/dify/tests/: conftest.py
src/docx/: Dockerfile  Makefile  README.md  docker-compose.yml
src/docx/tests/: test_tools.py
src/file-management/: docker-compose.yml
src/file-management/tests/: test_tools.py
src/frontend-design/: docker-compose.yml  pyproject.toml
src/langquery/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/langquery/src/langquery/: __init__.py  db.py  prompts.py  server.py  tools.py
src/langquery/tests/: test_prompts.py  test_tools.py
src/langquery/workspace/: README.md
src/nano-banana/: docker-compose.yml
src/o3-search/: README.md  docker-compose.yml  pyproject.toml
src/o3-search/src/o3_search/: __init__.py  server.py  tools.py
src/o3-search/tests/: test_tools.py
src/pdf/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/playwright-browser/: Dockerfile  Makefile  README.md  pyproject.toml
src/playwright-browser/tests/: test_tools.py
src/playwright-browser/workspace/: README.md
src/pptx/: Dockerfile  Makefile  README.md  docker-compose.yml
src/pptx/tests/: test_tools.py
src/preview/: Dockerfile  README.md  docker-compose.yml
src/shell/: README.md
src/shell/tests/: test_tools.py
src/vectorstore/: Dockerfile  Makefile  docker-compose.yml
src/xlsx/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/xlsx/tests/: test_server.py  test_tools.py
(+33 files in other folders)
