[project]
name = "composite"
version = "0.1.0"
description = "MCP composite server for aggregating multiple backend MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "starlette>=0.41.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
