[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langquery"
version = "0.1.0"
description = "a mcp server that allows clients to manipulate table data by natural language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "fastmcp>=2.12.5",
    "langchain>=1.0.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langquery"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
